--- a/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
+++ b/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
@@ -1,38 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../assets/style.css" />
+    <title>Sizing Tracks in CSS Grid!</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/style.css">
-  <title>Sizing Tracks in CSS Grid!</title>
-</head>
+  <body>
+    <div class="container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+      <div class="item">5</div>
+      <div class="item">6</div>
+      <div class="item">7</div>
+      <div class="item">8</div>
+      <div class="item">9</div>
+      <div class="item">10</div>
+      <div class="item">11</div>
+      <div class="item">12</div>
+      <div class="item">13</div>
+      <div class="item">14</div>
+      <div class="item">15</div>
+    </div>
+    <div class="squares-container">
+      <div class="square1"></div>
+      <div class="square2"></div>
+    </div>
 
-<body>
-  <div class="container">
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
-    <div class="item">6</div>
-    <div class="item">7</div>
-    <div class="item">8</div>
-    <div class="item">9</div>
-    <div class="item">10</div>
-    <div class="item">11</div>
-    <div class="item">12</div>
-    <div class="item">13</div>
-    <div class="item">14</div>
-    <div class="item">15</div>
-  </div>
+    <style>
+      .container {
+        display: grid;
+        grid-gap: 20px;
+        border: 10px solid goldenrod;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 10px;
+      }
 
-  <style>
-    .container {
-      display: grid;
-      grid-gap: 20px;
-    }
-  </style>
-</body>
-
+      .squares-container {
+        margin-top: 10px;
+        display: grid;
+        grid-gap: 20px;
+        border: 10px solid goldenrod;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        padding: 10px;
+      }
+      .square1 {
+        grid-area: 1 / 1 / 4 / 3;
+        background: red;
+        opacity: 0.4;
+      }
+      .square2 {
+        grid-area: 2 / 2 / 5 / 5;
+        background: blue;
+        opacity: 0.3;
+      }
+    </style>
+  </body>
 </html>
