Practice alignment and grid sizes with exercises from 12 to 18

--- a/14 - Grid Template Areas/areas-START.html
+++ b/14 - Grid Template Areas/areas-START.html
@@ -1,36 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../assets/style.css" />
+    <title>Grid Template Areas</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/style.css">
-  <title>Grid Template Areas</title>
-</head>
+  <body>
+    <div class="container">
+      <div class="item item1">
+        <p>I'm Sidebar #1</p>
+      </div>
+      <div class="item item2">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+          sed.
+        </p>
+        <p>Lorem ipsum d</p>
+      </div>
+      <div class="item item3">
+        <p>I'm Sidebar #2</p>
+      </div>
+      <div class="item footer">
+        <p>I'm the footer</p>
+      </div>
+    </div>
 
-<body>
-  <div class="container">
-    <div class="item item1">
-      <p>I'm Sidebar #1</p>
-    </div>
-    <div class="item item2">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sed.</p>
-      <p>Lorem ipsum d</p>
-    </div>
-    <div class="item item3">
-      <p>I'm Sidebar #2</p>
-    </div>
-    <div class="item footer">
-      <p>I'm the footer</p>
-    </div>
-  </div>
-
-  <style>
-    .container {
-      display: grid;
-      grid-gap: 20px;
-    }
-  </style>
-</body>
-
+    <style>
+      .container {
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: 1fr 500px 1fr;
+        grid-template-rows: repeat(2, 150px) 100px;
+        grid-template-areas:
+          "sidebar1 main sidebar2"
+          "sidebar1 main sidebar2"
+          "footer footer footer";
+        & > * {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          text-align: center;
+          align-items: center;
+        }
+      }
+      .footer {
+        grid-column: footer-start / footer-end;
+      }
+      .item1 {
+        grid-area: sidebar1;
+      }
+      .item2 {
+        grid-area: main;
+      }
+      .item3 {
+        grid-area: sidebar2;
+      }
+    </style>
+  </body>
 </html>
