--- a/19 - Nesting Grid with Album Layouts/albums-START.html
+++ b/19 - Nesting Grid with Album Layouts/albums-START.html
@@ -1,103 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../assets/style.css" />
+    <title>Nesting Grid with Album Layouts!</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/style.css">
-  <title>Nesting Grid with Album Layouts!</title>
-</head>
+  <body>
+    <div class="albums">
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=1"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis,
+            excepturi!
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=2"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">short.</p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=3"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=4"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=5"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=6"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=7"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=8"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=9"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <img
+          class="album__artwork"
+          src="https://source.unsplash.com/random/300x300?v=10"
+        />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+    </div>
 
-<body>
+    <style>
+      img {
+        width: 120px;
+        height: 120px;
+      }
+      p {
+        font-weight: 500;
+        font-size: 1.2rem;
+      }
 
-  <div class="albums">
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=1">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, excepturi!</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=2">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">short.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=3">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=4">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=5">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=6">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=7">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=8">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=9">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=10">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
+      .albums {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        grid-template-rows: repeat(auto-fit, 1fr);
+        grid-gap: 2rem;
+        align-items: center;
+      }
+      .album {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        grid-gap: 1rem;
+        padding: 15px;
+        align-items: center;
+        background-color: rgba(240, 240, 240, 0.2);
+        color: aliceblue;
+      }
+      .album__details > p {
+        margin: 0;
+        padding: 0;
+        line-height: 1.4;
+      }
 
-  </div>
-
-
-  <style>
-  </style>
-</body>
-
+      .album__artist {
+        font-size: 0.9rem;
+        font-weight: bolder;
+      }
+    </style>
+  </body>
 </html>
