--- a/19 - Nesting Grid with Album Layouts/albums-START.html
+++ b/19 - Nesting Grid with Album Layouts/albums-START.html
@@ -153,40 +153,27 @@
     </div>
 
     <style>
-      img {
-        width: 120px;
-        height: 120px;
-      }
-      p {
-        font-weight: 500;
-        font-size: 1.2rem;
-      }
-
       .albums {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-        grid-template-rows: repeat(auto-fit, 1fr);
-        grid-gap: 2rem;
-        align-items: center;
-      }
-      .album {
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-        grid-gap: 1rem;
-        padding: 15px;
-        align-items: center;
-        background-color: rgba(240, 240, 240, 0.2);
-        color: aliceblue;
-      }
-      .album__details > p {
-        margin: 0;
-        padding: 0;
-        line-height: 1.4;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        gap: 20px;
       }
 
-      .album__artist {
-        font-size: 0.9rem;
-        font-weight: bolder;
+      .album {
+        background-color: rgba(255, 255, 255, 0.2);
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        display: grid;
+        grid-template-columns: 150px 1fr;
+        gap: 10px;
+        align-items: center;
+        color: white;
+      }
+
+      .album__artwork {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     </style>
   </body>
